[package]
name = "seela"
version = "1.3.2"
edition = "2024"
license = "MIT"
authors = ["Bardiya Feili"]
description = "A simple tmux session manager."
repository = "https://github.com/BardiyaFeili/seela"
homepage = "https://github.com/BardiyaFeili/seela"
documentation = "https://github.com/BardiyaFeili/seela"
keywords = ["tmux", "fzf", "session-manager", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
walkdir = "2.4"
shellexpand = "3.1"
rayon = "1.11.0"
