[package]
name = "seela"
version = "1.7.2"
edition = "2024"
license = "MIT"
authors = ["Bardiya Feili"]
description = "A fast and customizable tmux session manager."
repository = "https://github.com/BardiyaFeili/seela"
homepage = "https://github.com/BardiyaFeili/seela"
documentation = "https://github.com/BardiyaFeili/seela"
keywords = ["tmux", "fzf", "session-manager", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "1"
clap = { version = "4.0", features = ["derive"] }
dirs = "6.0"
walkdir = "2.4"
shellexpand = "3.1"
rayon = "1.11.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2"
